# demo-agent-01

./: .env.template  .gitignore  LICENSE  MCP_SETUP.md  MIGRATION.md  Makefile  README for session 7a8b9c2d.md  README for session f3e8d9a1.md  README.md  __init__.py  pyproject.toml  requirements.txt.bak  test_docker_mcp.py  test_env_loading.py  test_simple_agent.py
READMEs/: README for repo demo-agent-01 session 436.md  README for repo demo-agent-01 session 931.md  README for session 4b9e7c31.md
agent_tools/: github_tools.py  web_tools.py
agents/: agent.py  config_base_model.py  github_agent.py  requirements.txt  web_search_agent.py
agents/swarm/: planner.py  summarizer.py
demo_agent/: __init__.py  cli.py
my_agent/: agent.py  agent_fixed.py  requirements.txt  web_search_agent.py
